--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
       crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
 <style>
     @import url('https://fonts.cdnfonts.com/css/bebas-neue');
 
@@ -410,7 +411,7 @@
 
 <header>
     <div class="monclerlogo">
-        <a href="HomePage"><img src="img/monclerlogo.webp" alt="Bekassyl" onclick="clicklogo" class="moncler"></a>
+        <a href="HomePage"><img src="img/newLogo1.png" alt="Bekassyl" onclick="clicklogo" class="moncler"></a>
     </div>
     <div class="links">
         <ul>
