--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Добро Пожаловать в Canelli Co!</title>
@@ -419,7 +419,7 @@
 </div>
 <header>
     <div class="monclerlogo">
-        <a href="HomePage"><img src="img/monclerlogo.webp" alt="Bekassyl" onclick="clicklogo" class="moncler" /></a>
+        <a href="HomePage"><img src="img/newLogo1.png" alt="Bekassyl" onclick="clicklogo" class="moncler" /></a>
     </div>
     <div class="links">
         <ul>
