--- a/src/main/resources/templates/Favorite.html
+++ b/src/main/resources/templates/Favorite.html
@@ -1,19 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Men's Shop - Bucket</title>
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet'
+          href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </head>
-<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-<link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <style>
     img.photo {
         height: auto;
@@ -32,7 +43,7 @@
         height: 80px;
         transition: 0.5s;
         width: 100%;
-        background-color: black;
+        background: black;
     }
 
     header:hover {
@@ -212,7 +223,7 @@
         background: white;
         position: absolute;
         top: 80px;
-        left: 1670px;
+        left: 1700px;
         z-index: 900;
         display: none;
         grid-template-columns: auto;
@@ -279,56 +290,9 @@
         display: grid;
         grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
     }
-    .error{
-        background-color: rgba(0,0,0,0.5);
-        bottom: 0;
-        left: 0;
-        max-width: 100%;
-        position: fixed;
-        right: 0;
-        top: 0;
-        z-index: 500;
-    }
-    .error-panel {
-        background-color: #fff;
-        background-size: 90px;
-        border-radius: 10px;
-        box-sizing: border-box;
-        left: inherit;
-        margin: auto;
-        max-width: 540px;
-        padding: 30px 20px;
-        position: absolute;
-        right: inherit;
-        text-align: center;
-        margin-top: 15px;
-    }
-    .h3{
-        font-size: 24px;
-        font-weight: bold;
-        font-family: 'Arial';
-    }
-    .error-panel ul{
-        list-style-type: none;
-    }
-    .error-panel .error-close input{
-        background: black;
-        color: white;
-        font-family: 'Montserrat';
-        padding: 0 16px;
-        width: 100%;
-        height: 40px;
-        padding-left: 16px;
-        border-radius: 3px;
-        border: 1px solid;
-        box-sizing: border-box;
-        line-height: 17px;
-    }
-    .error-panel .error-close input:hover{
-        cursor: pointer;
-    }
 </style>
 <body>
+
 <header>
     <div class="monclerlogo">
         <a href="HomePage"><img src="img/newLogo1.png" alt="123" onclick="clicklogo" class="moncler"></a>
@@ -475,94 +439,36 @@
     </div>
 </header>
 
-
-
-<div th:if="${NotChanged}" class="error" style="display: block;" onclick="myfunc()">
-    <div class="error-panel">
-        <span class="p" th:text="${passwordNotChanged}"></span>
-        <div class="error-close">
-            <input type="button" value="Закрыть сообщение">
-        </div>
-    </div>
+<div th:if="${products == null}" style="justify-content: center; text-align: center; margin-top: 10%; height: 50vh;">
+    <svg aria-hidden="true" class="pre-nav-design-icon" focusable="false" viewBox="0 0 24 24" role="img" width="200px"
+         height="200px" fill="none">
+        <path stroke="currentColor" stroke-width="1.5"
+              d="M16.794 3.75c1.324 0 2.568.516 3.504 1.451a4.96 4.96 0 010 7.008L12 20.508l-8.299-8.299a4.96 4.96 0 010-7.007A4.923 4.923 0 017.205 3.75c1.324 0 2.568.516 3.504 1.451l.76.76.531.531.53-.531.76-.76a4.926 4.926 0 013.504-1.451"></path>
+    </svg>
+    <h1><b>ЗДЕСЬ БУДУТ<br>ИЗБРАННЫЕ ТОВАРЫ</b></h1>
+    <a href="/Clothes" style="color: red;"><b>НАЧАТЬ ПОКУПКИ</b></a>
 </div>
 
-<div th:if="${passwordChanged}" class="error" style="display: block;" onclick="myfunc()">
-    <div class="error-panel">
-        <span class="p">Пароль успешно изменен!</span>
-        <div class="error-close">
-            <input type="button" value="Закрыть сообщение">
-        </div>
-    </div>
-</div>
+<section class="py-5">
+    <div class="container px-5 my-5">
+        <div class="row gx-5 ">
 
-<div class="row g-3 p-5">
-    <div class="col-md-6">
-        <label for="inputEmail4" class="form-label">Name</label>
-        <input type="text" class="form-control" id="inputName4"  th:value="${userName}" readonly>
-    </div>
-    <div class="col-md-6">
-        <label for="inputEmail4" class="form-label">Phone Number</label>
-        <input type="text" class="form-control" id="inputEmail4" readonly  th:value="${phoneNumber}">
-    </div>
-    <div class="col-6">
-        <label for="inputAddress" class="form-label">Address</label>
-        <input type="text" class="form-control" id="inputAddress" readonly  th:value="${address}">
-    </div>
-    <div class="col-6">
-        <label for="inputAddress2" class="form-label">Birthday</label>
-        <input type="text" class="form-control" id="inputAddress2" readonly  th:value="${birthday}">
-    </div>
-    <div class="col-md-6">
-        <label for="inputCity" class="form-label">Email</label>
-        <input type="email" class="form-control" id="inputCity" readonly  th:value="${email}">
-    </div>
-    <div class="col-12">
-        <button type="submit" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop_">Change Password</button>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop_" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Change Password</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form action="/Profile/changePassword" method="post">
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Old password</label>
-                            <input type="text" class="form-control" name="oldPassword" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">New password</label>
-                            <input type="text" class="form-control" name="newPassword" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Confirm password</label>
-                            <input type="text" class="form-control" name="confirmPassword" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                        </div>
-                        <input type="hidden" name="id" th:value="${id}">
-                        <button type="submit" class="btn btn-dark">Change</button>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <div th:each="product : ${products}" class="col-lg-4 mb-3">
+                <div class="card h-100 shadow border-0">
+                    <img class="card-img-top" th:src="'img/' + ${product.photo}" alt="...">
+                    <div class="card-body p-4">
+                        <a class="text-decoration-none link-dark stretched-link"
+                           th:href="'More?id=' + ${product.id}"></a><h5
+                            class="card-title mb-3" th:text="${product.productName} + ' ' + ${product.price} +' KZT'"></h5>
+                        <p class="card-text mb-0" th:text="${product.productBrand} + ' | Это стильная и удобная мужская одежда,
+                            созданная для комфорта и элегантности в повседневной жизни.'"></p>
+                        <p class="card-text mb-0" th:text="'Размер: ' + ${product.size}"></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Modal -->
-</div>
-
-<form action="/Profile/changeNotify" method="post" style="margin: 50px">
-    <div class="form-check form-switch mb-3">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault1" name="newsNotification" th:checked="${newsNotify=='true'}">
-        <label class="form-check-label" for="flexSwitchCheckDefault1">notify me about news</label>
-    </div>
-
-    <button class="btn btn-secondary">Save</button>
-</form>
-
+</section>
 
 
 <footer>
@@ -609,13 +515,5 @@
     <div class="con">Конфиденциальность и файлы cookie</div>
 
 </footer>
-<script>
-    function myfunc(){
-        document.getElementsByClassName("error")[0].style.display = "none";
-    }
-    if (performance.navigation.type === 1) {
-        window.location.href = '/Profile';
-    }
-</script>
 </body>
 </html>
