--- a/src/main/resources/templates/RestorePassword.html
+++ b/src/main/resources/templates/RestorePassword.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Добро Пожаловать в Canelli Co!</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Restore Password</title>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
 </head>
-<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-<link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <style>
     @import url('https://fonts.cdnfonts.com/css/bebas-neue');
 
@@ -17,7 +26,7 @@
         align-items: center;
         text-align: center;
         background: white;
-        margin-top: 100px;
+        height: 80vh;
     }
 
     form label {
@@ -32,14 +41,12 @@
         float: left;
     }
 
-    form h2 {
-        color: #566A7F;
+    form {
+        padding: 20px;
+        border-radius: 10px;
+        background: #fff;
     }
 
-    button {
-        width: 100%;
-        padding: 4px;
-    }
 
     form input {
         font-family: 'Montserrat';
@@ -50,23 +57,8 @@
         border-radius: 3px;
         border: 1px solid;
         box-sizing: border-box;
-        color: #8d8d8d;
-        line-height: 17px;
-    }
-
-    select {
-        font-family: 'Montserrat';
-        width: 100%;
-        height: 40px;
-        padding-left: 16px;
-        border-radius: 3px;
-        color: #8d8d8d;
-        line-height: 17px;
-
-    }
-
-    option {
         color: black;
+        line-height: 17px;
     }
 
     form a {
@@ -75,20 +67,8 @@
         color: black;
     }
 
-    form div {
-        font-family: TradeGothicforNike365-BdCn, Helvetica !important;
-        font-size: 14px;
-        padding: 5px 0 5px 0;
-    }
-
-    form input:focus {
-        outline: none;
-    }
-
-    form .error-message {
-        display: none;
-        font-weight: bold;
-        color: red;
+    form p {
+        font-family: 'Montserrat';
     }
 
     form h2 {
@@ -110,10 +90,6 @@
         margin-bottom: 30px;
     }
 
-    form p {
-        font-family: 'Montserrat';
-    }
-
     form img.img1 {
         width: 35%;
     }
@@ -123,12 +99,6 @@
         font-size: 14px;
     }
 
-    /* .checkbox{
-        float: right;
-    }
-    input.check1{
-        float: left;
-    } */
     button {
         background-color: #000;
         border: 1px solid #000;
@@ -140,6 +110,7 @@
         font-size: 15px;
         margin: auto;
         height: 40px;
+        width: 100%;
     }
 
     .error {
@@ -207,69 +178,9 @@
         align-items: center;
         padding: 0;
         height: 80px;
-        background: black;
-        width: 100%;
-    }
-
-    .links ul {
-        display: flex;
-        list-style-type: none;
-    }
-
-    div.links li {
-        padding: 18px 15px 18px 15px;
-    }
-
-    div.links ul li a {
-        color: black;
-        text-decoration: none;
-        font-family: 'Montserrat';
-        color: white;
-        font-size: 19px;
-    }
-
-    .moncler {
-        margin: 70px 0 18px 30px;
-        width: 55%;
-        cursor: pointer;
-    }
-
-    .links svg {
-        border-radius: 50%;
-        padding: 4px;
-        color: white;
-    }
-
-    .links svg:hover {
-        background: #e5e5e5;
-        cursor: pointer;
-    }
-
-    div.actions {
-        display: flex;
-    }
-
-    div.searchs {
-        margin: 30px 2px 30px 2px;
-    }
-
-    .links ul li input {
-        margin-top: 10px;
-    }
-
-    .links ul li input {
-        border-radius: 20px;
-    }
-
-    header {
-        display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0;
-        height: 80px;
         transition: 0.5s;
         width: 100%;
+        background: black;
     }
 
     header:hover {
@@ -296,7 +207,7 @@
 
     .links {
         padding: 0;
-        height: 60px;
+        height: 80px;
     }
 
     .links ul {
@@ -449,7 +360,7 @@
         background: white;
         position: absolute;
         top: 80px;
-        left: 1670px;
+        left: 1695px;
         z-index: 900;
         display: none;
         grid-template-columns: auto;
@@ -486,24 +397,77 @@
     .password-toggle-icon i:hover {
         color: #000;
     }
+    .error {
+        background-color: rgba(0, 0, 0, 0.5);
+        bottom: 0;
+        left: 0;
+        max-width: 100%;
+        position: fixed;
+        right: 0;
+        top: 0;
+        z-index: 500;
+    }
+
+    .error-panel {
+        background-color: #fff;
+        background-size: 90px;
+        border-radius: 10px;
+        box-sizing: border-box;
+        left: inherit;
+        margin: auto;
+        max-width: 540px;
+        padding: 30px 20px;
+        position: absolute;
+        right: inherit;
+        text-align: center;
+        margin-top: 15px;
+    }
+
+    .h3 {
+        font-size: 24px;
+        font-weight: bold;
+        font-family: 'Arial';
+    }
+
+    .error-panel ul {
+        list-style-type: none;
+    }
+
+    .error-panel .error-close input {
+        background: black;
+        color: white;
+        font-family: 'Montserrat';
+        padding: 0 16px;
+        width: 100%;
+        height: 40px;
+        padding-left: 16px;
+        border-radius: 3px;
+        border: 1px solid;
+        box-sizing: border-box;
+        line-height: 17px;
+    }
+
+    .error-panel .error-close input:hover {
+        cursor: pointer;
+    }
 </style>
 <body>
 
-
-<div th:if="${alreadyHave}" class="error" style="display: block;" onclick="myfunc()">
+<div th:if="${notSuchAccount}" class="error" style="display: block;" onclick="myfunc()">
     <div class="error-panel">
         <span class="h3">Произошла ошибка</span>
         <ul>
-            <li>Пользователя с такой почтой или номереом телефона уже существует.</li>
+            <li>Извините, нет такого пользователя. Повторите попытку занова.</li>
         </ul>
         <div class="error-close">
             <input type="button" value="Закрыть сообщение">
         </div>
     </div>
 </div>
+
 <header>
     <div class="monclerlogo">
-        <a href="HomePage"><img src="img/newLogo1.png" alt="Bekassyl" onclick="clicklogo" class="moncler"/></a>
+        <a href="/HomePage"><img src="../img/newLogo1.png" alt="Bekassyl" class="moncler"></a>
     </div>
     <div class="links">
         <ul>
@@ -512,95 +476,33 @@
     </div>
     <div class="links">
         <ul>
-            <li><a href="/Login">Login</a></li>
+            <li><a href="Login">Login</a></li>
             <li>|</li>
-            <li><a href="/SignUp">Signup</a></li>
+            <li><a href="SignUp">Signup</a></li>
         </ul>
     </div>
 </header>
+
+
 <div class="body">
-    <form method="POST" action="/SignUp">
+    <form method="POST" action="/Login/sendCode">
+
         <h2 class="h2">БУДЬ С НАМИ В МОДЕ</h2>
         <h2 class="logo">Men's Shop</h2>
-        <p>Создай профиль члена клуба Men's Shop и получи<br> доступ к лучшим товарам Men's Shop, источникам<br>
-            вдохновения и общению в сообществе.</p><br><br>
-        <input type="text" name="name" id="name" th:value="${name}" placeholder="First name"><br>
-        <div style="color: red;" th:if="${nameError}" th:text="${nameErrorContent}"></div>
-
-
-        <input type="text" name="phoneNumber" id="phoneNumber" th:value="${phoneNum}" placeholder="Phone Number"><br>
-        <div style="color: red;" th:if="${phNumError}" th:text="${phNumErrorContent}"></div>
-
-        <input type="date" name="birthday" th:value="${birthday}"><br>
-        <div style="color: red;" th:if="${birthdayError}" th:text="${birthdayErrorContent}"></div>
-
-
-        <select name="address" value="">
-            <option value="">Address</option>
-            <option value="БатысҚ">Батыс Қазақстан</option>
-            <option value="Орал">Орал</option>
-            <option value="Атырау">Атырау</option>
-            <option value="Ақтөбе">Ақтөбе</option>
-            <option value="Маңғыстау">Маңғыстау</option>
-            <option value="Қостанай">Қостанай</option>
-            <option value="Қызылорда">Қызылорда</option>
-            <option value="Ұлытау">Ұлытау</option>
-            <option value="Түркістан">Түркістан</option>
-            <option value="Шымкент">Шымкент</option>
-            <option value="Тараз">Тараз</option>
-            <option value="Алматы">Алматы</option>
-            <option value="Талдықорған">Талдықорған</option>
-            <option value="Семей">Семей</option>
-            <option value="Өскемен">Өскемен</option>
-            <option value="Қарағанды">Қарағанды</option>
-            <option value="Павлодар">Павлодар</option>
-            <option value="Астана">Астана</option>
-            <option value="Көкшетау">Көкшетау</option>
-            <option value="Петропавл">Петропавл</option>
-        </select><br>
-        <div style="color: red;" th:if="${addressError}" th:text="${addressErrorContent}"></div>
-
-        <input type="email" name="email" id="email" th:value="${email}" placeholder="Email"><br>
-        <div style="color: red;" th:if="${emailError}" th:text="${emailErrorContent}"></div>
-
-        <input type="password" name="password" id="password" th:value="${password}" placeholder="Password">
-        <span class="password-toggle-icon"><i class="fa fa-eye"></i></span>
-        </input>
+        <p>Введите почту и подтвердите свою почту</p>
         <br><br>
-        <div style="color: red;" th:if="${passwordError}" th:text="${passwordErrorContent}"></div>
-
-        <!-- <input type="checkbox" name="message" id="chechbox" class="check1">
-        <label for="checkbox" class="checkbox">Подпишись на рассы.лку, чтобы получать новости<br> от Canelli co. о товарах, а также предложения и<br> преимущества для членов клуба</label> -->
-
-        <button type="submit">ДАВАЙ С НАМИ</button>
-        <p>Ты уже участник? <a href="Login">Войди</a></p>
+        <input type="email" name="email" placeholder="Email" th:value="${email}" required><br><br><br><br>
+        <button type="submit">отправить код на почту</button>
     </form>
 </div>
-
 <script>
     function myfunc() {
         document.getElementsByClassName("error")[0].style.display = "none";
     }
 
     if (performance.navigation.type === 1) {
-        window.location.href = 'SignUp';
+        window.location.href = './ConfirmEmailToChangePassword';
     }
-
-    const passwordField = document.getElementById("password");
-    const togglePassword = document.querySelector(".password-toggle-icon i");
-
-    togglePassword.addEventListener("click", function () {
-        if (passwordField.type === "password") {
-            passwordField.type = "text";
-            togglePassword.classList.remove("fa-eye");
-            togglePassword.classList.add("fa-eye-slash");
-        } else {
-            passwordField.type = "password";
-            togglePassword.classList.remove("fa-eye-slash");
-            togglePassword.classList.add("fa-eye");
-        }
-    });
 </script>
-
 </body>
 </html>
