--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>Canelli co. - Home Page</title>
+    <title>Men's Shop - Home Page</title>
 </head>
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet">
